--- a/singleProduct.html
+++ b/singleProduct.html
@@ -37,6 +37,8 @@
                     <div class="img-showcase">
                         <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
                             alt="shoe image" />
+                        <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
+                            alt="shoe image" />
                     </div>
                 </div>
                 <div class="img-select">
