--- a/product.html
+++ b/product.html
@@ -79,23 +79,26 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
-                    alt="">
+                <a href="singleProduct.html"> <img
+                        src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
+                        alt=""></a>
                 <h3 class="title">Small bee honey</h3>
                 <div class="icons">
                     Rs. 1,249.00
-                    <div class="btn"><a href="singleProduct.html">Visit</a></div>
+                    <!-- <div class="btn"><a href="singleProduct.html">Visit</a></div> -->
                 </div>
             </div>
 
             <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
-                    alt="">
+                <a href="singleProduct2.html"> <img
+                        src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
+                        alt=""></a>
                 <h3 class="title">Wild Raw Honey</h3>
                 <div class="icons">
-                    From Rs. 575.00 <div class="btn"><a href="#">Visit</a></div>
+                    From Rs. 575.00
                 </div>
             </div>
+
             <div class="box">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
                     alt="">
@@ -108,7 +111,7 @@
                 <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt="">
                 <h3 class="title">A2 Desi Cow Ghee</h3>
                 <div class="icons">
-                    From Rs. 925.00 <div class="btn"><a href="#">Visit</a></div>
+                    From Rs. 925.00
                 </div>
             </div>
             <div class="box">
@@ -116,7 +119,7 @@
                     alt="">
                 <h3 class="title">Natural Honey</h3>
                 <div class="icons">
-                    From Rs. 475.00 <div class="btn"><a href="#">Visit</a></div>
+                    From Rs. 475.00
                 </div>
             </div>
             <div class="box">
@@ -124,7 +127,7 @@
                     alt="">
                 <h3 class="title">Natural Turmeric</h3>
                 <div class="icons">
-                    From Rs. 175.00 <div class="btn"><a href="#">Visit</a></div>
+                    From Rs. 175.00
                 </div>
             </div>
         </div>
