--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
-    .swiper {
-      width: 100%;
-      height: fit-content;
-    }
+        .swiper {
+            width: 100%;
+            height: fit-content;
+        }
 
         .swiper-slide {
             text-align: center;
@@ -231,8 +231,9 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
-                    alt="">
+                <a href="singleProduct.html">
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
+                        alt=""></a>
                 <h3 class="title">Small bee honey</h3>
                 <div class="icons">
                     Rs. 1,249.00
@@ -240,39 +241,44 @@
             </div>
 
             <div class="box">
+                <a href="singleProduct.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Wild Raw Honey</h3>
                 <div class="icons">
                     From Rs. 575.00
                 </div>
             </div>
             <div class="box">
+                <a href="singleProduct.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Kashmiri Saffron 1gm</h3>
                 <div class="icons">
                     Rs. 550.00
                 </div>
             </div>
             <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt="">
+                <a href="singleProduct.html">
+                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt=""></a>
                 <h3 class="title">A2 Desi Cow Ghee</h3>
                 <div class="icons">
                     From Rs. 925.00
                 </div>
             </div>
             <div class="box">
+                <a href="singleProduct.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/Adityark_a_bag_of_a_tan_colored_product_filled_with_turmeric_ki_30bdb482-db0c-4404-8b6c-cb59bec40502.png?v=1685016262&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Natural Honey</h3>
                 <div class="icons">
                     From Rs. 475.00
                 </div>
             </div>
             <div class="box">
+                <a href="singleProduct.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/image_519177bc-9938-4cfb-b9ad-8b723ca31af2.png?v=1689100808&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Natural Turmeric</h3>
                 <div class="icons">
                     From Rs. 175.00
@@ -405,8 +411,8 @@
                 dynamicBullets: true,
             },
             autoplay: {
-                delay: 2000, 
-                disableOnInteraction: false, 
+                delay: 2000,
+                disableOnInteraction: false,
             },
         });
 
