more product added

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
 
             <div class="box">
-                <a href="singleProduct.html">
+                <a href="singleProduct2.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
                     alt=""></a>
                 <h3 class="title">Wild Raw Honey</h3>
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="box">
-                <a href="singleProduct.html">
+                <a href="singleProduct3.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
                     alt=""></a>
                 <h3 class="title">Kashmiri Saffron 1gm</h3>
