--- a/product.html
+++ b/product.html
@@ -100,31 +100,35 @@
             </div>
 
             <div class="box">
+                <a href="singleProduct3.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Kashmiri Saffron 1gm</h3>
                 <div class="icons">
                     Rs. 550.00 <div class="btn"><a href="#">Visit</a></div>
                 </div>
             </div>
             <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt="">
+                <a href="singleProduct.html">
+                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt=""></a>
                 <h3 class="title">A2 Desi Cow Ghee</h3>
                 <div class="icons">
                     From Rs. 925.00
                 </div>
             </div>
             <div class="box">
+                <a href="singleProduct3.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/Adityark_a_bag_of_a_tan_colored_product_filled_with_turmeric_ki_30bdb482-db0c-4404-8b6c-cb59bec40502.png?v=1685016262&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Natural Honey</h3>
                 <div class="icons">
                     From Rs. 475.00
                 </div>
             </div>
             <div class="box">
+                <a href="singleProduct.html">
                 <img src="https://vaaradhifarms.com/cdn/shop/files/image_519177bc-9938-4cfb-b9ad-8b723ca31af2.png?v=1689100808&width=400"
-                    alt="">
+                    alt=""></a>
                 <h3 class="title">Natural Turmeric</h3>
                 <div class="icons">
                     From Rs. 175.00
