--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#price">Products</a>
+            <a href="product.html">Products</a>
             <a href="#gallery">our gallery</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
@@ -60,12 +60,6 @@
     </header>
 
     <!-- Header Ends -->
-
-
-
-
-
-
 
     <!-- Home Starts -->
 
@@ -285,7 +279,6 @@
                 </div>
             </div>
         </div>
-        <div class="btn gg"><a href="product.html">Load More</a></div>
 
     </section>
 
