--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
         <marquee behavior="scroll" direction="left" loop="-1">
             <div class="fas fa-tag">
                 <span id="mt">
-                    Get ready to go down the memory lane!
+                    Experience Fresh Farm Goodness!
                 </span>
             </div>
             <div class="fas fa-tag">
                 <span id="mt">
-                    Get ready to go down the memory lane!
+                    Experience Fresh Farm Goodness!
                 </span>
             </div>
             <div class="fas fa-tag">
                 <span id="mt">
-                    Get ready to go down the memory lane!
+                    Experience Fresh Farm Goodness!
                 </span>
             </div>
             <div class="fas fa-tag">
                 <span id="mt">
-                    Get ready to go down the memory lane!
+                    Experience Fresh Farm Goodness!
                 </span>
             </div>
             <div class="fas fa-tag">
                 <span id="mt">
-                    Get ready to go down the memory lane!
+                    Experience Fresh Farm Goodness!
                 </span>
             </div>
 
