--- a/about.html
+++ b/about.html
@@ -85,16 +85,14 @@
             </div>
 
             <div class="content">
-                <h3>we will give a very special celebration for you</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis
-                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
-                    perferendis
-                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
-                    perferendis
-                    perspiciatis provident dolores fuga in facilis culpa possimus, quia praesentium itaque, sapiente
-                    quasi harum rem asperiores.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat vero expedita incidunt provident
-                    quibusdam aut odit, numquam nesciunt similique nisi.</p>
+                <h3>Rooted in Tradition, Cultivating Tomorrow.</h3>
+                <p class="about-info">At Ayukta Farms, we believe in the timeless values of integrity, quality, and
+                    environmental stewardship. Our journey began with a vision to reconnect people with the land,
+                    offering an alternative to mass-produced, chemically treated food. Through meticulous attention to
+                    soil health and natural farming techniques, we cultivate a diverse array of fruits, vegetables, and
+                    herbs, bursting with flavor and nutrition.</p>
+                <p>What sets Ayukta Farms apart is our unwavering commitment to transparency and traceability. From seed
+                    to harvest, every step of our farming process is conducted with care and accountability.</p>
             </div>
 
         </div>
