--- a/index.html
+++ b/index.html
@@ -128,17 +128,14 @@
             </div>
 
             <div class="content">
-                <h3>we will give a very special celebration for you</h3>
-                <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut
-                    esse perferendis
-                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
-                    perferendis
-                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
-                    perferendis
-                    perspiciatis provident dolores fuga in facilis culpa possimus, quia praesentium itaque, sapiente
-                    quasi harum rem asperiores.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat vero expedita incidunt provident
-                    quibusdam aut odit, numquam nesciunt similique nisi.</p>
+                <h3>Growing Tomorrow's Bounty, Today</h3>
+                <p class="about-info">At Ayukta Farms, we believe in the timeless values of integrity, quality, and
+                    environmental stewardship. Our journey began with a vision to reconnect people with the land,
+                    offering an alternative to mass-produced, chemically treated food. Through meticulous attention to
+                    soil health and natural farming techniques, we cultivate a diverse array of fruits, vegetables, and
+                    herbs, bursting with flavor and nutrition.</p>
+                <p>What sets Ayukta Farms apart is our unwavering commitment to transparency and traceability. From seed
+                    to harvest, every step of our farming process is conducted with care and accountability.</p>
                 <a href="about.html" class="btn">Know More</a>
             </div>
 
@@ -236,8 +233,8 @@
 
             <div class="box">
                 <a href="singleProduct2.html">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
-                    alt=""></a>
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
+                        alt=""></a>
                 <h3 class="title">Wild Raw Honey</h3>
                 <div class="icons">
                     From Rs. 575.00
@@ -245,8 +242,8 @@
             </div>
             <div class="box">
                 <a href="singleProduct3.html">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
-                    alt=""></a>
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
+                        alt=""></a>
                 <h3 class="title">Kashmiri Saffron 1gm</h3>
                 <div class="icons">
                     Rs. 550.00
@@ -254,7 +251,8 @@
             </div>
             <div class="box">
                 <a href="singleProduct.html">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt=""></a>
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400"
+                        alt=""></a>
                 <h3 class="title">A2 Desi Cow Ghee</h3>
                 <div class="icons">
                     From Rs. 925.00
@@ -262,8 +260,8 @@
             </div>
             <div class="box">
                 <a href="singleProduct.html">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Adityark_a_bag_of_a_tan_colored_product_filled_with_turmeric_ki_30bdb482-db0c-4404-8b6c-cb59bec40502.png?v=1685016262&width=400"
-                    alt=""></a>
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/Adityark_a_bag_of_a_tan_colored_product_filled_with_turmeric_ki_30bdb482-db0c-4404-8b6c-cb59bec40502.png?v=1685016262&width=400"
+                        alt=""></a>
                 <h3 class="title">Natural Honey</h3>
                 <div class="icons">
                     From Rs. 475.00
@@ -271,8 +269,8 @@
             </div>
             <div class="box">
                 <a href="singleProduct.html">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/image_519177bc-9938-4cfb-b9ad-8b723ca31af2.png?v=1689100808&width=400"
-                    alt=""></a>
+                    <img src="https://vaaradhifarms.com/cdn/shop/files/image_519177bc-9938-4cfb-b9ad-8b723ca31af2.png?v=1689100808&width=400"
+                        alt=""></a>
                 <h3 class="title">Natural Turmeric</h3>
                 <div class="icons">
                     From Rs. 175.00
